More styling and adding another default setting

--- a/assets/timber.scss.liquid
+++ b/assets/timber.scss.liquid
@@ -102,11 +102,11 @@ $colorBody: {{ settings.color_body_bg }};
 $colorBorder: {{ settings.color_borders }};
 
 // Nav and dropdown link background
-$colorNav: {{ settings.color_footer_bg }};
+$colorNav: {{ settings.color_nav_bg }};
 $colorNavText: {{ settings.color_footer_text }};
 
 // Site Footer
-$colorFooterBg: {{ settings.color_footer_bg }};
+$colorFooterBg: {{ settings.color_nav_bg }};
 $colorFooterText: {{ settings.color_footer_text }};
 
 // Helper colors
@@ -1937,7 +1937,41 @@ label.error {
 
 .grid__image {
   display: block;
+  position: relative;
   margin: 0 auto ($gutter / 2);
+
+  .hover {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background: rgba($colorNav, 0.85);
+    opacity: 0;
+    transition: all 1s;
+    -webkit-transition: all 1s;
+
+    .icon {
+      color: $colorBody;
+      font-size: 5em;
+      text-align: center;
+      margin: 50% auto 0 auto;
+      transform: translateY(-50%);
+      -webkit-transform: translateY(-50%);
+      display: block;
+      opacity: 0;
+      transition: all 1.3s;
+      -webkit-transition: all 1.3s;
+    }
+  }
+
+  &:hover .hover {
+    opacity: 1;
+
+    .icon {
+      opacity: 1;
+    }
+  }
 
   img {
     display: block;
@@ -1950,6 +1984,70 @@ label.error {
 ==============================================================================*/
 .filter--active {
   font-weight: bold;
+}
+
+.tags {
+  list-style: none;
+  margin: 0;
+  overflow: hidden;
+  padding: 0;
+
+  a {
+    background: #eee;
+    border-radius: 3px 0 0 3px;
+    color: #999;
+    display: inline-block;
+    height: 26px;
+    line-height: 26px;
+    padding: 0 20px 0 23px;
+    position: relative;
+    margin: 0 10px 10px 0;
+    text-decoration: none;
+    -webkit-transition: all 0.25s;
+  }
+
+  .filter--active {
+    a {
+      color: $colorBody;
+      background-color: $colorPrimary;
+    }
+
+    a::after {
+      border-left-color: $colorPrimary;
+    }
+  }
+
+  a::before {
+    background: #fff;
+    border-radius: 10px;
+    content: '';
+    height: 6px;
+    left: 10px;
+    position: absolute;
+    width: 6px;
+    top: 10px;
+  }
+
+  a::after {
+    background: #fff;
+    border-bottom: 13px solid transparent;
+    border-left: 10px solid #eee;
+    border-top: 13px solid transparent;
+    content: '';
+    position: absolute;
+    right: 0;
+    top: 0;
+    -webkit-transition: all 0.25s;
+  }
+
+  a:hover {
+    background-color: $colorPrimary;
+    color: $colorBody;
+  }
+
+  a:hover::after {
+     border-left-color: $colorPrimary;
+  }
 }
 
 /*============================================================================
