--- a/snippets/product-grid-item.liquid
+++ b/snippets/product-grid-item.liquid
@@ -63,6 +63,7 @@
   {% endcomment %}
   <a href="{{ product.url | within: collection }}" class="grid__image">
     <img src="{{ product.featured_image.src | img_url: 'large' }}" alt="{{ product.featured_image.alt | escape }}">
+    <span class="hover"><icon class="icon icon-search" aria-hidden="true" /></span>
   </a>
 
   <p class="h6">
