--- a/snippets/collection-grid-item.liquid
+++ b/snippets/collection-grid-item.liquid
@@ -26,6 +26,7 @@
     {% else %}
       {{ collection.products.first.featured_image | img_url: 'large' | img_tag: collection_title }}
     {% endif %}
+    <span class="hover"><icon class="icon icon-search" aria-hidden="true" /></span>
   </a>
 
   <p>
