--- a/snippets/collection-sidebar.liquid
+++ b/snippets/collection-sidebar.liquid
@@ -64,26 +64,26 @@
     To provide a 'catch-all' link at the top of the list,
     check against the collection.handle, product type, and vendor.
   {% endcomment %}
-  <ul>
+  <ul class="tags">
     <li{% unless current_tags %} class="filter--active"{% endunless %}>
 
       {% comment %}
         Good for /collections/all collection and regular collections
       {% endcomment %}
       {% if collection.handle %}
-        <a href="/collections/{{ collection.handle }}">All {{ collection.title }}</a>
+        <a class="tag" href="/collections/{{ collection.handle }}">All {{ collection.title }}</a>
 
       {% comment %}
         Good for automatic type collections
       {% endcomment %}
       {% elsif collection.current_type %}
-        <a href="{{ collection.current_type | url_for_type }}">All {{ collection.title }}</a>
+        <a class="tag" href="{{ collection.current_type | url_for_type }}">All {{ collection.title }}</a>
 
       {% comment %}
         Good for automatic vendor collections
       {% endcomment %}
       {% elsif collection.current_vendor %}
-        <a href="{{ collection.current_vendor | url_for_vendor }}">All {{ collection.title }}</a>
+        <a class="tag" href="{{ collection.current_vendor | url_for_vendor }}">All {{ collection.title }}</a>
 
       {% endif %}
     </li>
