Adding prefixed transforms

--- a/assets/timber.scss.liquid
+++ b/assets/timber.scss.liquid
@@ -1969,6 +1969,8 @@ label.error {
       margin: 50% auto 0 auto;
       transform: translateY(-50%);
       -webkit-transform: translateY(-50%);
+      -moz-transform: translateY(-50%);
+      -ms-transform: translateY(-50%);
       display: block;
       opacity: 0;
       transition: all 1.3s;
